--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,99 @@
+/********** Base styles **********/
+* {
+  box-sizing: border-box;
+}
 
+html{ 
+  font-family: Helvetica;
+}
+
+body{
+margin-left: 1.5%;
+margin-right: 1.5%;  
+}
+h1 {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 1.75em;
+}
+
+.menusection {
+margin-left: 1.5%;
+margin-right: 1.5%;
+margin-top: 1.5%;
+margin-bottom: 1.5%;
+background-color: #aaaa55;
+border: 1px solid black;
+}
+
+p.menudetail {
+  border: none;
+  background-color: transparent;
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: auto;
+  padding: 20px;
+  color: dark grey;
+}
+
+.menusubtitle {
+  float: right;
+  border: 1px solid black;
+  padding: 0px;
+  margin: 0px;
+  width: 30%;
+  height: 10%;
+  text-align: center;
+  font-size: 1.25em;
+  color: white;
+}
+
+#Chicken {
+  background-color: #808000;
+}
+#Beef {
+  background-color: #800000;
+}
+#Sushi {
+  background-color: #007399;
+}
+/* Simple Responsive Framework. */
+.row {
+  width: 100%;
+  margin-bottom: 3%;
+}
+
+/********** Desktop devices only **********/
+@media (min-width: 992px) {
+    .col-lg-3 {
+      float: left;
+    width: 30.33%;
+  }
+  
+}
+
+/********** Tablet devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-6, .col-md-12 {
+    float: left;
+  }
+  .col-md-6 {
+    width: 47%;
+  }
+  .col-md-12 {
+    width: 97%;
+  }
+}
+/********** Smartphones devices only 
+@media (max-width: 767px) {
+  .col-sm-12 {
+    
+  }
+  .col-sm-12 {
+    width: 97%;
+  }
+}
+**********/
